addded banner image and padding on mobile

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <main>
             <div class="page-container">
                 <div class="page-max-width">
+                    <div class="img-header-banner">
+                        <img src="assets/header-banner-avocadij-pomoginam.jpg" alt="header banner image questionaire">
+                    </div>
                     <h1>Nutrition and Lifestyle Questionaire</h1>
                     <!-- <form class="page-form" id="ajaxForm" action="https://getform.io/f/d69a1bbd-37a4-440e-a904-92ad476bc397" method="POST"> -->
                     <div class="page-form">
@@ -45,6 +48,7 @@
                             </fieldset>
 
                             <fieldset class="questions">
+                                <div class="questions-wrapper"></div>
                                 <p>1. Do you shop less frequently than every four days?</p>
                                 <div class="questions-box">
                                     <input type="radio" id="question1" data-number="1" name="1.Do you shop less frequently than every four days?" value="Yes" class="input-radio">
@@ -53,6 +57,8 @@
                                 <div class="questions-box">
                                     <input type="radio" id="question2" data-number="0" name="1.Do you shop less frequently than every four days?" value="No" class="input-radio">
                                     <label for="question2">No</label>
+                                </div>
+                                <div class="questions-animation">
                                 </div>
                             </fieldset>
 
