--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Follow The Dot: Holistic Lifestyle</title>
     <meta name="robots" content="noindex">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css?v='>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -365,15 +365,15 @@
                                     <label for="question57">1-2 times per week (2)</label>
                                 </div>
                                 <div class="questions-box">
-                                    <input type="radio" id="question58" data-number="5" name="Do you use commercial salad dressings?d" value="3 times per week" class="input-radio">
+                                    <input type="radio" id="question58" data-number="5" name="Do you eat from fast food restaurants like McDonald's, Arbey's, Wendy's, etc...?" value="3 times per week" class="input-radio">
                                     <label for="question58">3 times per week (5)</label>
                                 </div>
                                 <div class="questions-box">
-                                    <input type="radio" id="question59" data-number="10" name="Do you use commercial salad dressings?" value="More than 3 times per week" class="input-radio">
+                                    <input type="radio" id="question59" data-number="10" name="Do you eat from fast food restaurants like McDonald's, Arbey's, Wendy's, etc...?" value="More than 3 times per week" class="input-radio">
                                     <label for="question59">more than 3 times per week (10)</label>
                                 </div>
                                 <div class="questions-box">
-                                    <input type="radio" id="question60" data-number="0" name="Do you use commercial salad dressings?" value="More than 3 times per week" class="input-radio">
+                                    <input type="radio" id="question60" data-number="0" name="Do you eat from fast food restaurants like McDonald's, Arbey's, Wendy's, etc...?" value="More than 3 times per week" class="input-radio">
                                     <label for="question60">No (0)</label>
                                 </div>
                             </fieldset>
