--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Follow The Dot: Holistic Lifestyle</title>
     <meta name="robots" content="noindex">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css?v='>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,11 +51,11 @@
                                 <div class="questions-wrapper"></div>
                                 <p>1. Do you shop less frequently than every four days?</p>
                                 <div class="questions-box">
-                                    <input type="radio" id="question1" data-number="1" name="1.Do you shop less frequently than every four days?" value="Yes" class="input-radio">
+                                    <input type="radio" id="question1" data-number="1" name="Do you shop less frequently than every four days?" value="Yes" class="input-radio">
                                     <label for="question1">Yes (1)</label>
                                 </div>
                                 <div class="questions-box">
-                                    <input type="radio" id="question2" data-number="0" name="1.Do you shop less frequently than every four days?" value="No" class="input-radio">
+                                    <input type="radio" id="question2" data-number="0" name="Do you shop less frequently than every four days?" value="No" class="input-radio">
                                     <label for="question2">No (0)</label>
                                 </div>
                                 <div class="questions-animation">
@@ -309,7 +309,7 @@
                                     <label for="question47">more than 3 times per week (5)</label>
                                 </div>
                                 <div class="questions-box">
-                                    <input type="radio" id="question48" data-number="0" name="Do you use white table sugar as a sweetener?" value="More than 3 times per week" class="input-radio">
+                                    <input type="radio" id="question48" data-number="0" name="Do you use white table sugar as a sweetener?" value="No" class="input-radio">
                                     <label for="question48">No (0)</label>
                                 </div>
                             </fieldset>
@@ -321,7 +321,7 @@
                                     <label for="question49">once a week (1)</label>
                                 </div>
                                 <div class="questions-box">
-                                    <input type="radio" id="question50" data-number="3" name="Do you use artificial sweeteners such as Sweet-n-Low, Equal or Nurtasweet? value="3 times per week" class="input-radio">
+                                    <input type="radio" id="question50" data-number="3" name="Do you use artificial sweeteners such as Sweet-n-Low, Equal or Nurtasweet?" value="3 times per week" class="input-radio">
                                     <label for="question50">2-3 times per week (3)</label>
                                 </div>
                                 <div class="questions-box">
@@ -329,7 +329,7 @@
                                     <label for="question51">more than 3 times per week (5)</label>
                                 </div>
                                 <div class="questions-box">
-                                    <input type="radio" id="question52" data-number="0" name="Do you use artificial sweeteners such as Sweet-n-Low, Equal or Nurtasweet?" value="More than 3 times per week" class="input-radio">
+                                    <input type="radio" id="question52" data-number="0" name="Do you use artificial sweeteners such as Sweet-n-Low, Equal or Nurtasweet?" value="No" class="input-radio">
                                     <label for="question52">No (0)</label>
                                 </div>
                             </fieldset>
@@ -373,7 +373,7 @@
                                     <label for="question59">more than 3 times per week (10)</label>
                                 </div>
                                 <div class="questions-box">
-                                    <input type="radio" id="question60" data-number="0" name="Do you eat from fast food restaurants like McDonald's, Arbey's, Wendy's, etc...?" value="More than 3 times per week" class="input-radio">
+                                    <input type="radio" id="question60" data-number="0" name="Do you eat from fast food restaurants like McDonald's, Arbey's, Wendy's, etc...?" value="No" class="input-radio">
                                     <label for="question60">No (0)</label>
                                 </div>
                             </fieldset>
@@ -455,8 +455,10 @@
             </div>
         </main>
         <footer>
-
-        </footer>
+            <div class="page-max-width">
+                <p>&#169; 2023 FollowTheDot. All rights reserved.</p>
+            </div>
+        </footer> 
     </div>
 <script src='main.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
