--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Follow The Dot: Holistic Lifestyle</title>
     <meta name="robots" content="noindex">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css?v=0.1'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -614,7 +614,7 @@
                             </div>
                             <fieldset class="questions questions-section">
                                 <div class="questions-wrapper"></div>
-                                <p>9. Do you live in the same time zone you were born in?</p>
+                                <p>1. Do you live in the same time zone you were born in?</p>
                                 <div class="questions-box">
                                     <input type="radio" id="question71" data-number="10" name="Do you live in the same time zone you were born in?" value="Yes" class="input-radio">
                                     <label for="question1">Yes (0)</label>
