remove no index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Follow The Dot: Holistic Lifestyle</title>
-    <meta name="robots" content="noindex">
+    <!-- <meta name="robots" content="noindex"> -->
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <!-- Favicons -->
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Stylesheets/Libs -->
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css?v=0.13'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css?v=0.14'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -576,7 +576,7 @@
                                 <div class="questions-box">
                                     <input type="radio" id="question51" data-number="10" name="Do you use artificial sweeteners such as Sweet-n-Low, Equal or Nurtasweet?" value="More than 3 times per week" class="input-radio">
                                     <label for="question51">
-                                        <span lang="en">more than 3 times per week</span>
+                                        <span lang="en">More than 3 times per week</span>
                                         <span lang="ru" class="is-hidden">Более 3x раз в неделю</span>
                                     </label>
                                 </div>
