added max-width to img

--- a/3d.html
+++ b/3d.html
@@ -24,6 +24,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="Assets/followthedot-screen.png">
+    <img src="Assets/followthedot-screen.png" style="max-width: 100%">
 </body>
 </html>
