added a href to img (download)

--- a/3d.html
+++ b/3d.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge, chrome=1'>
-    <title>Test</title>
+    <title>3D Follow the dot</title>
     <meta name="robots" content="noindex">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
@@ -24,6 +24,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="Assets/followthedot-screen.png" style="max-width: 100%">
+    <a href="Assets/followthedot-screen.png" download="followthedot-screen.png" title="followthedot-screen.png">
+        <img src="Assets/followthedot-screen.png" style="max-width: 100%">
+    </a>
 </body>
 </html>
