added video page

--- a/3d.html
+++ b/3d.html
@@ -19,12 +19,12 @@
     <!-- Stylesheets/Libs -->
     <link rel='stylesheet' type='text/css' media='screen' href='main.css?v=0.14'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"> -->
 </head>
 <body>
-    <a href="Assets/followthedot-screen.png" download="followthedot-screen.png" title="followthedot-screen.png">
+    <a href="Assets/followthedot-screen.png" download="followthedot-screen.png" title="followthedot-screen.png" style="display: flex">
         <img src="Assets/followthedot-screen.png" style="max-width: 100%">
     </a>
 </body>
