--- a/secret8.html
+++ b/secret8.html
@@ -19,11 +19,14 @@
     <!-- Stylesheets/Libs -->
     <link rel='stylesheet' type='text/css' media='screen' href='main.css?v=0.14'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"> -->
 </head>
 <body>
-    <img src="Assets/followthedot-screen.jpg">
+    <video controls width="1080" height="1920" style="max-width: 100%;">
+        <source src="Assets/secret8.webm" type="video/webm">
+        <source src="Assets/secret8.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
