--- a/secret8.html
+++ b/secret8.html
@@ -24,7 +24,7 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"> -->
 </head>
 <body>
-    <video controls width="1080" height="1920" style="max-width: 100%;">
+    <video controls width="100%" height="100%" style="max-width: 100%;">
         <source src="Assets/secret8.webm" type="video/webm">
         <source src="Assets/secret8.mp4" type="video/mp4">
     </video>
