added qr codes to download

--- a/3d.html
+++ b/3d.html
@@ -27,5 +27,7 @@
     <a href="Assets/followthedot-screen.png" download="followthedot-screen.png" title="followthedot-screen.png" style="display: flex">
         <img src="Assets/followthedot-screen.png" style="max-width: 100%">
     </a>
+    <a href="Asssets/3d.svg">download 3d</a>
+    <a href="Asssets/secret8.svg">download 3d</a>
 </body>
 </html>
