--- a/3d.html
+++ b/3d.html
@@ -28,6 +28,6 @@
         <img src="Assets/followthedot-screen.png" style="max-width: 100%">
     </a>
     <a href="Asssets/3d.svg">download 3d</a>
-    <a href="Asssets/secret8.svg">download 3d</a>
+    <a href="Asssets/secret8.svg">download video</a>
 </body>
 </html>
