--- a/3d.html
+++ b/3d.html
@@ -27,7 +27,7 @@
     <a href="Assets/followthedot-screen.png" download="followthedot-screen.png" title="followthedot-screen.png" style="display: flex">
         <img src="Assets/followthedot-screen.png" style="max-width: 100%">
     </a>
-    <a href="Asssets/3d.svg" download="3d.svg" title="3d.svg">download 3d</a>
-    <a href="Asssets/secret8.svg" download="secret8.svg" title="secret8.svg">download video</a>
+    <a href="Asssets/3d.png" download="3d.png" title="3d.png">download 3d</a>
+    <a href="Asssets/secret8.png" download="secret8.png" title="secret8.png">download video</a>
 </body>
 </html>
