changed ru to en

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <nav>
                     <ul>
                         <li class="lang-switch">
-                            <span lang="ru">RU</span>
-                            <span lang="en" class="is-hidden">EN</span>
+                            <span lang="ru">EN</span>
+                            <span lang="en" class="is-hidden">RU</span>
                         </li>
                     </ul>
                 </nav>
