added type of food form, refactor js nutrition

--- a/index.html
+++ b/index.html
@@ -2761,7 +2761,7 @@
                         </div>
                     </div>
                     <!-- TOTAL SCORE -->
-                    <div class="table-container">
+                    <div class="table-container last-table-container">
                         <div class="table-wrapper is-hidden">
                             <div class="section-header">
                                 <h2>
