--- a/type-of-food.html
+++ b/type-of-food.html
@@ -16,12 +16,15 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <!-- Stylesheets/Libs -->
+    <!-- Stylesheets -->
     <link rel='stylesheet' type='text/css' media='screen' href='main.css?v=0.14'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
+    <!-- Scripts -->
+
 </head>
 <body id="food-type-page">
     <div class="page-wrapper">
@@ -265,7 +268,7 @@
                                     </label>
                                 </div>
                                 <div class="questions-box">
-                                    <input type="radio" id="question8B" name="question12" value="B" class="input-radio">
+                                    <input type="radio" id="question12B" name="question12" value="B" class="input-radio">
                                     <label for="question12B">
                                         <span lang="ru">В. Легкие нежирные йогурты и сыры или десерты</span>
                                     </label>
@@ -314,8 +317,10 @@
                     </form>
 
                     <div id="result-food-type" style="display: none;">
-                        <h3>Ваше тип питания</h3>
-                        <img id="food-type-image" alt="Food type image">
+                        <div class="result-food-type-wrapper">
+                            <h3>Ваше тип питания</h3>
+                            <img id="food-type-image" alt="Food type image">
+                        </div>
                     </div>                    
                 </div>
             </div>
@@ -326,6 +331,6 @@
             </div>
         </footer> 
     </div>
-<script src='food.js'></script>
+<script src='food-type.js'></script>
 </body>
 </html>
